# ParkPP

./: .gitignore  CMakeLists.txt  README.md  helper.bat
ext/: CMakeLists.txt
include/: engine.hpp
include/engine/: graphics_device.h  image.h  models.h  pipeline.h  pipeline_builder.h  renderer.h  scene.h  shaders.h  texture.h  window.h
include/game/: default_pipeline.h  default_transparent_pipeline.h  game.h  models.h
resources/models/: F1_2026.mtl
resources/scenes/: scene.xml
resources/shaders/: shader.frag  shader.vert  shadow_shader.vert
shaders/: shader.frag  shader.vert
src/: main.cpp
src/engine/: default_pipeline.cpp  graphics_device.cpp  image.cpp  models.cpp  pipeline.cpp  pipeline_builder.cpp  renderer.cpp  scene.cpp  shaders.cpp  shadow_pipeline.cpp  texture.cpp  window.cpp
src/game/: default_pipeline.cpp  default_transparent_pipeline.cpp  models.cpp
